--- a/Class3rd(Bit)/Class3rd(Bit).vcxproj
+++ b/Class3rd(Bit)/Class3rd(Bit).vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>18.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ac280d45-8168-45ea-96a1-fac691cca2ec}</ProjectGuid>
-    <RootNamespace>Class2ndVariableConstant</RootNamespace>
+    <ProjectGuid>{c89ce7fe-da16-47c8-ac58-d938623fcd6b}</ProjectGuid>
+    <RootNamespace>Class3rdBit</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Class3rd (Bit)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
